--- a/tests/integration/targets/vmware_cluster_ha/tasks/main.yml
+++ b/tests/integration/targets/vmware_cluster_ha/tasks/main.yml
@@ -16,7 +16,6 @@
     cluster_name: test_cluster_ha
     state: present
 
-# Testcase 0001: Enable HA
 - name: Enable HA
   vmware_cluster_ha:
     validate_certs: false
@@ -26,109 +25,174 @@
     datacenter_name: "{{ dc1 }}"
     cluster_name: test_cluster_ha
     enable_ha: true
-  register: cluster_ha_result_0001
+  register: enable_ha_result
 
 - name: Ensure HA is enabled
   assert:
     that:
-        - "{{ cluster_ha_result_0001.changed == true }}"
-
-# Testcase 0002: Enable Slot based Admission Control
-- name: Enable Slot based Admission Control
-  vmware_cluster_ha:
-    validate_certs: false
-    hostname: "{{ vcenter_hostname }}"
-    username: "{{ vcenter_username }}"
-    password: "{{ vcenter_password }}"
-    datacenter_name: "{{ dc1 }}"
-    cluster_name: test_cluster_ha
-    enable_ha: true
-    slot_based_admission_control:
-      failover_level: 1
-  register: cluster_ha_result_0002
-
-- name: Ensure Admission Cotrol is enabled
-  assert:
-    that:
-        - "{{ cluster_ha_result_0002.changed == true }}"
-
-# Testcase 0003: Enable Cluster resource Percentage based Admission Control
-- name: Enable Cluster resource Percentage based Admission Control
-  vmware_cluster_ha:
-    validate_certs: false
-    hostname: "{{ vcenter_hostname }}"
-    username: "{{ vcenter_username }}"
-    password: "{{ vcenter_password }}"
-    datacenter_name: "{{ dc1 }}"
-    cluster_name: test_cluster_ha
-    enable_ha: true
-    reservation_based_admission_control:
-      auto_compute_percentages: false
-      failover_level: 1
-      cpu_failover_resources_percent: 33
-      memory_failover_resources_percent: 33
-  register: cluster_ha_result_0003
-
-- name: Ensure Admission Cotrol is enabled
-  assert:
-    that:
-        - "{{ cluster_ha_result_0003.changed == true }}"
-
-# Testcase 0004: Set Isolation Response to powerOff
-- name: Set Isolation Response to powerOff
-  vmware_cluster_ha:
-    validate_certs: false
-    hostname: "{{ vcenter_hostname }}"
-    username: "{{ vcenter_username }}"
-    password: "{{ vcenter_password }}"
-    datacenter_name: "{{ dc1 }}"
-    cluster_name: test_cluster_ha
-    enable_ha: true
-    host_isolation_response: 'powerOff'
-  register: cluster_ha_result_0004
-
-- name: Ensure Isolation Response is enabled
-  assert:
-    that:
-        - "{{ cluster_ha_result_0004.changed == true }}"
-
-# Testcase 0005: Set Isolation Response to shutdown
-- name: Set Isolation Response to shutdown
-  vmware_cluster_ha:
-    validate_certs: false
-    hostname: "{{ vcenter_hostname }}"
-    username: "{{ vcenter_username }}"
-    password: "{{ vcenter_password }}"
-    datacenter_name: "{{ dc1 }}"
-    cluster_name: test_cluster_ha
-    enable_ha: true
-    host_isolation_response: 'shutdown'
-  register: cluster_ha_result_0005
-
-- name: Ensure Isolation Response is enabled
-  assert:
-    that:
-        - "{{ cluster_ha_result_0005.changed == true }}"
-
-# Testcase 0006: Disable HA
-- name: Disable HA
-  vmware_cluster_ha:
-    validate_certs: false
-    hostname: "{{ vcenter_hostname }}"
-    username: "{{ vcenter_username }}"
-    password: "{{ vcenter_password }}"
-    datacenter_name: "{{ dc1 }}"
-    cluster_name: test_cluster_ha
-    enable_ha: false
-  register: cluster_ha_result_0006
-
-- name: Ensure HA is disabled
-  assert:
-    that:
-        - "{{ cluster_ha_result_0006.changed == true }}"
+      - enable_ha_result.changed
 
 - when: vcsim is not defined
   block:
+  - name: Change APD response to "restartAggressive" (check-mode)
+    vmware_cluster_ha: &change_apd_response
+      validate_certs: false
+      hostname: "{{ vcenter_hostname }}"
+      username: "{{ vcenter_username }}"
+      password: "{{ vcenter_password }}"
+      datacenter_name: "{{ dc1 }}"
+      cluster_name: test_cluster_ha
+      enable_ha: true
+      apd_response: 'restartAggressive'
+    check_mode: true
+    register: change_apd_response_check
+
+  - assert:
+      that:
+        - change_apd_response_check.changed
+
+  - name: Change APD response to "restartAggressive"
+    vmware_cluster_ha: *change_apd_response
+    register: change_apd_response
+
+  - assert:
+      that:
+        - change_apd_response.changed
+
+  - name: Change APD response to "restartAggressive" again
+    vmware_cluster_ha: *change_apd_response
+    register: change_apd_response_again
+
+  - assert:
+      that:
+        - not change_apd_response_again.changed
+
+  - name: Change APD response back to default
+    vmware_cluster_ha:
+      validate_certs: false
+      hostname: "{{ vcenter_hostname }}"
+      username: "{{ vcenter_username }}"
+      password: "{{ vcenter_password }}"
+      datacenter_name: "{{ dc1 }}"
+      cluster_name: test_cluster_ha
+      enable_ha: true
+
+  - name: Change PDL response to "restartAggressive" (check-mode)
+    vmware_cluster_ha: &change_pdl_response
+      validate_certs: false
+      hostname: "{{ vcenter_hostname }}"
+      username: "{{ vcenter_username }}"
+      password: "{{ vcenter_password }}"
+      datacenter_name: "{{ dc1 }}"
+      cluster_name: test_cluster_ha
+      enable_ha: true
+      pdl_response: 'restartAggressive'
+    check_mode: true
+    register: change_pdl_response_check
+
+  - assert:
+      that:
+        - change_pdl_response_check.changed
+
+  - name: Change PDL response to "restartAggressive"
+    vmware_cluster_ha: *change_pdl_response
+    register: change_pdl_response
+
+  - assert:
+      that:
+        - change_pdl_response.changed
+
+  - name: Change PDL response to "restartAggressive" again
+    vmware_cluster_ha: *change_pdl_response
+    register: change_pdl_response_again
+
+  - assert:
+      that:
+        - not change_pdl_response_again.changed
+
+  - name: Change PDL response back to default
+    vmware_cluster_ha:
+      validate_certs: false
+      hostname: "{{ vcenter_hostname }}"
+      username: "{{ vcenter_username }}"
+      password: "{{ vcenter_password }}"
+      datacenter_name: "{{ dc1 }}"
+      cluster_name: test_cluster_ha
+      enable_ha: true
+
+  - name: Enable Slot based Admission Control
+    vmware_cluster_ha:
+      validate_certs: false
+      hostname: "{{ vcenter_hostname }}"
+      username: "{{ vcenter_username }}"
+      password: "{{ vcenter_password }}"
+      datacenter_name: "{{ dc1 }}"
+      cluster_name: test_cluster_ha
+      enable_ha: true
+      slot_based_admission_control:
+        failover_level: 1
+    register: enable_slot_based_admission_control_result
+
+  - name: Ensure Admission Cotrol is enabled
+    assert:
+      that:
+        - enable_slot_based_admission_control_result.changed
+
+  - name: Enable Cluster resource Percentage based Admission Control
+    vmware_cluster_ha:
+      validate_certs: false
+      hostname: "{{ vcenter_hostname }}"
+      username: "{{ vcenter_username }}"
+      password: "{{ vcenter_password }}"
+      datacenter_name: "{{ dc1 }}"
+      cluster_name: test_cluster_ha
+      enable_ha: true
+      reservation_based_admission_control:
+        auto_compute_percentages: false
+        failover_level: 1
+        cpu_failover_resources_percent: 33
+        memory_failover_resources_percent: 33
+    register: enable_percentage_based_admission_control_result
+
+  - name: Ensure Admission Cotrol is enabled
+    assert:
+      that:
+        - enable_percentage_based_admission_control_result.changed
+
+  - name: Set Isolation Response to powerOff
+    vmware_cluster_ha:
+      validate_certs: false
+      hostname: "{{ vcenter_hostname }}"
+      username: "{{ vcenter_username }}"
+      password: "{{ vcenter_password }}"
+      datacenter_name: "{{ dc1 }}"
+      cluster_name: test_cluster_ha
+      enable_ha: true
+      host_isolation_response: 'powerOff'
+    register: isolation_response_poweroff_result
+
+  - name: Ensure Isolation Response is enabled
+    assert:
+      that:
+        - isolation_response_poweroff_result.changed
+
+  - name: Set Isolation Response to shutdown
+    vmware_cluster_ha:
+      validate_certs: false
+      hostname: "{{ vcenter_hostname }}"
+      username: "{{ vcenter_username }}"
+      password: "{{ vcenter_password }}"
+      datacenter_name: "{{ dc1 }}"
+      cluster_name: test_cluster_ha
+      enable_ha: true
+      host_isolation_response: 'shutdown'
+    register: isolation_response_shutdown_result
+
+  - name: Ensure Isolation Response is enabled
+    assert:
+      that:
+        - isolation_response_shutdown_result.changed
+
   - name: Change advanced setting "number of heartbeat datastores" (check-mode)
     vmware_cluster_ha: &change_num_heartbeat_ds
       validate_certs: false
@@ -137,6 +201,7 @@
       password: "{{ vcenter_password }}"
       datacenter_name: "{{ dc1 }}"
       cluster_name: test_cluster_ha
+      enable_ha: true
       advanced_settings:
           'das.heartbeatDsPerHost': '4'
     check_mode: true
@@ -170,8 +235,9 @@
       password: "{{ vcenter_password }}"
       datacenter_name: "{{ dc1 }}"
       cluster_name: test_cluster_ha
+      enable_ha: true
       advanced_settings:
-          'das.includeFTcomplianceChecks': 'false'
+          'das.includeFTcomplianceChecks': 'False'
     check_mode: true
     register: change_includeFTcomplianceChecks_check
 
@@ -194,6 +260,22 @@
   - assert:
       that:
         - not change_includeFTcomplianceChecks_again.changed
+
+  - name: Disable HA
+    vmware_cluster_ha:
+      validate_certs: false
+      hostname: "{{ vcenter_hostname }}"
+      username: "{{ vcenter_username }}"
+      password: "{{ vcenter_password }}"
+      datacenter_name: "{{ dc1 }}"
+      cluster_name: test_cluster_ha
+      enable_ha: false
+    register: disable_ha_result
+
+  - name: Ensure HA is disabled
+    assert:
+      that:
+        - disable_ha_result.changed
 
   # Delete test cluster
   - name: Delete test cluster
