--- a/changelogs/fragments/492-vmware_resource_pool-esxi_host.yml
+++ b/changelogs/fragments/492-vmware_resource_pool-esxi_host.yml
@@ -1,2 +1,2 @@
-minor_changes:
+breaking_changes:
 - vmware_resource_pool - manage resource pools on ESXi hosts (https://github.com/ansible-collections/community.vmware/issues/492).
