--- a/tests/integration/targets/vmware_guest_disk/tasks/main.yml
+++ b/tests/integration/targets/vmware_guest_disk/tasks/main.yml
@@ -147,7 +147,7 @@
         username: "{{ vcenter_username }}"
         password: "{{ vcenter_password }}"
         datacenter: "{{ dc1 }}"
-        validate_certs: no
+        validate_certs: false
         name: "{{ virtual_machines[0].name }}"
         disk:
           - size_gb: 2
@@ -175,7 +175,7 @@
         username: "{{ vcenter_username }}"
         password: "{{ vcenter_password }}"
         datacenter: "{{ dc1 }}"
-        validate_certs: no
+        validate_certs: false
         name: "{{ virtual_machines[0].name }}"
         disk:
           - size_gb: 3
@@ -202,7 +202,7 @@
         username: "{{ vcenter_username }}"
         password: "{{ vcenter_password }}"
         datacenter: "{{ dc1 }}"
-        validate_certs: no
+        validate_certs: false
         name: "{{ virtual_machines[0].name }}"
         disk:
           - size_gb: 4
@@ -229,7 +229,7 @@
         username: "{{ vcenter_username }}"
         password: "{{ vcenter_password }}"
         datacenter: "{{ dc1 }}"
-        validate_certs: no
+        validate_certs: false
         name: "{{ virtual_machines[0].name }}"
         disk:
           - state: "absent"
@@ -338,7 +338,7 @@
         username: "{{ vcenter_username }}"
         password: "{{ vcenter_password }}"
         datacenter: "{{ dc1 }}"
-        validate_certs: no
+        validate_certs: false
         name: "{{ virtual_machines[0].name }}"
         disk:
           - state: "absent"
@@ -364,7 +364,7 @@
     username: "{{ vcenter_username }}"
     password: "{{ vcenter_password }}"
     datacenter: "{{ dc1 }}"
-    validate_certs: no
+    validate_certs: false
     name: "{{ virtual_machines[0].name }}"
     disk:
       - datastore: "{{ rw_datastore }}"
@@ -391,7 +391,7 @@
     username: "{{ vcenter_username }}"
     password: "{{ vcenter_password }}"
     datacenter: "{{ dc1 }}"
-    validate_certs: no
+    validate_certs: false
     name: "{{ virtual_machines[0].name }}"
     disk:
       - datastore: "{{ rw_datastore }}"
@@ -418,7 +418,7 @@
     username: "{{ vcenter_username }}"
     password: "{{ vcenter_password }}"
     datacenter: "{{ dc1 }}"
-    validate_certs: no
+    validate_certs: false
     name: "{{ virtual_machines[0].name }}"
     disk:
       - datastore: "{{ rw_datastore }}"
@@ -454,7 +454,7 @@
         username: "{{ vcenter_username }}"
         password: "{{ vcenter_password }}"
         datacenter: "{{ dc1 }}"
-        validate_certs: no
+        validate_certs: false
         name: "{{ virtual_machines[0].name }}"
         disk:
           - disk_mode: "independent_nonpersistent"
@@ -482,7 +482,7 @@
         username: "{{ vcenter_username }}"
         password: "{{ vcenter_password }}"
         datacenter: "{{ dc1 }}"
-        validate_certs: no
+        validate_certs: false
         name: "{{ virtual_machines[0].name }}"
         disk:
           - controller_type: 'nvme'
@@ -511,7 +511,7 @@
         username: "{{ vcenter_username }}"
         password: "{{ vcenter_password }}"
         datacenter: "{{ dc1 }}"
-        validate_certs: no
+        validate_certs: false
         name: "{{ virtual_machines[0].name }}"
         disk:
           - state: "absent"
