--- a/tests/integration/targets/vmware_guest_network/tasks/main.yml
+++ b/tests/integration/targets/vmware_guest_network/tasks/main.yml
@@ -33,8 +33,11 @@
         num_cpus: 1
         scsi: paravirtual
       cdrom:
-        type: iso
-        iso_path: "[{{ ro_datastore }}] fedora.iso"
+        - type: iso
+          iso_path: "[{{ ro_datastore }}] fedora.iso"
+          controller_type: ide
+          controller_number: 0
+          unit_number: 0
       networks:
       - name: VM Network
 
