--- a/tests/integration/targets/prepare_vmware_tests/tasks/setup_virtualmachines.yml
+++ b/tests/integration/targets/prepare_vmware_tests/tasks/setup_virtualmachines.yml
@@ -15,8 +15,11 @@
       num_cpus: 1
       scsi: paravirtual
     cdrom:
-      type: iso
-      iso_path: "[{{ ro_datastore }}] fedora.iso"
+      - type: iso
+        iso_path: "[{{ ro_datastore }}] fedora.iso"
+        controller_type: ide
+        controller_number: 0
+        unit_number: 0
     networks:
     - name: VM Network
   with_items: '{{ virtual_machines }}'
@@ -39,8 +42,11 @@
       num_cpus: 1
       scsi: paravirtual
     cdrom:
-      type: iso
-      iso_path: "[{{ ro_datastore }}] fedora.iso"
+      - type: iso
+        iso_path: "[{{ ro_datastore }}] fedora.iso"
+        controller_type: ide
+        controller_number: 0
+        unit_number: 0
     networks:
     - name: VM Network
   with_items: '{{ virtual_machines_in_cluster }}'
