--- a/tests/integration/targets/vmware_host_facts/tasks/main.yml
+++ b/tests/integration/targets/vmware_host_facts/tasks/main.yml
@@ -91,3 +91,32 @@
           - "'numCpuCores' in facts['ansible_facts']['hardware']['cpuInfo']"
           - "'product' in facts['ansible_facts']['config']"
           - "'apiVersion' in facts['ansible_facts']['config']['product']"
+
+    - name: check host current time through a vcenter
+      vmware_host_facts:
+        validate_certs: false
+        hostname: "{{ vcenter_hostname }}"
+        username: "{{ vcenter_username }}"
+        password: "{{ vcenter_password }}"
+        esxi_hostname: '{{ esxi1 }}'
+      register: facts
+    - debug: var=facts
+    - name: verify host_date_time
+      assert:
+        that:
+          - "'host_date_time' in facts['ansible_facts']"
+          - facts['ansible_facts']['host_date_time'] == {}
+
+    - name: check host current time through a host
+      vmware_host_facts:
+        validate_certs: false
+        hostname: '{{ esxi1 }}'
+        username: '{{ esxi_user }}'
+        password: '{{ esxi_password }}'
+      register: facts
+    - debug: var=facts
+    - name: verify host_date_time
+      assert:
+        that:
+          - "'host_date_time' in facts['ansible_facts']"
+          - facts['ansible_facts']['host_date_time'] != {}
